syntax = "proto3";

package proto;

option go_package = "HW3/proto";

import "google/protobuf/empty.proto";

service AccountService {
  rpc GetAccount(AccountRequest) returns (AccountResponse);
  rpc CreateAccount(NewAccountRequest) returns (AccountResponse);
  rpc DeleteAccount(RemoveAccountRequest) returns (google.protobuf.Empty);
  rpc PatchAccount(UpdateAccountRequest) returns (AccountResponse);
  rpc RenameAccount(ChangeAccountNameRequest) returns (AccountResponse);

  rpc GetAllAccounts(AllAccountsRequest) returns (AllAccountsResponse);
}

message Account {
  string name = 1;
  int64 balance = 2;
}

message AccountRequest {
  string name = 1;
}

message NewAccountRequest {
  string name = 1;
  int64 balance = 2;
}

message RemoveAccountRequest {
  string name = 1;
}

message UpdateAccountRequest {
  string name = 1;
  int64 balance = 2;
}

message ChangeAccountNameRequest {
  string old_name = 1;
  string new_name = 2;
}

message AllAccountsRequest {
  string secret_key = 1;
}

message AllAccountsResponse {
  repeated Account accounts = 1;
}

message AccountResponse {
  string name = 1;
  int64 balance = 2;
}
